# skypro_diploma

./: .env-examp  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
advertisement/: models.py  paginations.py  permissions.py  serializers.py  tests.py  urls.py  views.py
advertisement/migrations/: 0001_initial.py  0002_feedback.py
advertisement/services/: function.py
config/: settings.py  urls.py
data/: advertisement_data.json  users_data.json
users/: models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
